--- a/Dronection/Android/WiFi/WiFiDronection/WiFiDronection/Resources/layout/ShowVisualizationDataLayout.axml
+++ b/Dronection/Android/WiFi/WiFiDronection/WiFiDronection/Resources/layout/ShowVisualizationDataLayout.axml
@@ -4,9 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white">
+<!--
+    Line chart
+    -->
     <com.github.mikephil.charting.charts.LineChart
         android:id="@+id/linechart"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="15dp"/>
+        android:layout_margin="15dp" />
 </LinearLayout>
