--- a/Dronection/Android/WiFi/WiFiDronection/WiFiDronection/Resources/layout/ControllerSettings.axml
+++ b/Dronection/Android/WiFi/WiFiDronection/WiFiDronection/Resources/layout/ControllerSettings.axml
@@ -7,6 +7,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:isScrollContainer="true">
+    <!--
+        Header
+        -->
         <TextView
             android:textSize="32dp"
             android:layout_marginTop="20dp"
@@ -16,7 +19,6 @@
             android:text="Controller Settings"
             android:gravity="center_horizontal"
             android:id="@+id/tvHeaderSettings" />
-    <!-- CONTROL MODE -->
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
@@ -31,24 +33,28 @@
                 android:layout_gravity="center"
                 android:weightSum="1"
                 android:id="@+id/rgControlMode">
+            <!--
+                Mode 1 radio button
+                -->
                 <RadioButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:checked="true"
-                    android:text="Mode 1"
                     android:textSize="24dp"
                     android:layout_marginBottom="4dp"
-                    android:layout_marginLeft="90dp"
+                    android:layout_marginLeft="140dp"
                     android:layout_gravity="center_horizontal"
                     android:layout_weight=".5"
                     android:id="@+id/rbMode1" />
+            <!--
+                Mode 2 radio button
+                -->
                 <RadioButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Mode 2"
                     android:textSize="24dp"
                     android:layout_marginBottom="4dp"
-                    android:layout_marginLeft="90dp"
+                    android:layout_marginLeft="140dp"
                     android:layout_gravity="center_horizontal"
                     android:layout_weight=".5"
                     android:id="@+id/rbMode2" />
@@ -60,6 +66,9 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:weightSum="1">
+        <!--
+            Mode 1 image
+            -->
             <ImageView
                 android:id="@+id/ivMode1"
                 android:src="@drawable/mode1"
@@ -70,6 +79,9 @@
                 android:layout_weight=".5"
                 android:scaleType="centerInside"
                 android:adjustViewBounds="true" />
+        <!--
+            Mode 2 image
+            -->
             <ImageView
                 android:id="@+id/ivMode2"
                 android:src="@drawable/mode2"
@@ -81,7 +93,9 @@
                 android:scaleType="centerInside"
                 android:adjustViewBounds="true" />
         </LinearLayout>
-    <!-- Start controller button -->
+    <!-- 
+        Start controller button
+        -->
         <Button
             android:id="@+id/btStart"
             android:textSize="20dp"
@@ -92,7 +106,9 @@
             android:layout_margin="10dp"
             android:textColor="#ffffff"
             android:background="#005DA9" />
-    <!-- Back button -->
+    <!-- 
+        Back button
+        -->
         <Button
             android:id="@+id/btnSettingsBack"
             android:textSize="20dp"
