--- a/Dronection/Android/WiFi/WiFiDronection/WiFiDronection/Resources/layout/CustomListItem.axml
+++ b/Dronection/Android/WiFi/WiFiDronection/WiFiDronection/Resources/layout/CustomListItem.axml
@@ -3,6 +3,9 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
+<!--
+    List Item textview
+    -->
     <TextView
         android:id="@+id/tvListItem"
         android:layout_width="match_parent"
