--- a/Dronection/Android/WiFi/WiFiDronection/WiFiDronection/Resources/layout/VisualizationLayout.axml
+++ b/Dronection/Android/WiFi/WiFiDronection/WiFiDronection/Resources/layout/VisualizationLayout.axml
@@ -5,6 +5,9 @@
     android:layout_height="match_parent"
     android:background="#ffffff"
     android:weightSum="1">
+<!--
+    Visualization data listview
+    -->
     <ListView
         android:id="@+id/lvData"
         android:layout_width="match_parent"
