--- a/Dronection/Android/WiFi/WiFiDronection/WiFiDronection/Resources/layout/WifiDialog.axml
+++ b/Dronection/Android/WiFi/WiFiDronection/WiFiDronection/Resources/layout/WifiDialog.axml
@@ -3,6 +3,9 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+<!--
+    Password edittext
+    -->
     <EditText
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
